--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,7 +9,7 @@
             <h3 class="title">Inicia sesion<span class="point">.</span></h3>
             <div class="textinput">
                 <label for="user" class="sr-only"></label>
-                <input class="ti" type="text" name="user" id="user" [(ngModel)]="loginData.UserName" #user="ngModel"
+                <input class="ti" type="text" name="user" id="user" [(ngModel)]="loginData.Username" #user="ngModel"
                 placeholder="Usuario" autocomplete="username"
                 required>
             </div>
