tiene error de standalone

--- a/src/app/components/currencylist/currencylist.component.html
+++ b/src/app/components/currencylist/currencylist.component.html
@@ -1,1 +1,4 @@
-<p>currencylist works!</p>
+<h2>Moneda</h2>
+<p>{{ c.CurrencyName }}</p>
+<p>{{ c.CurrencySymbol }}</p>
+<p>{{ c.CurrencyValue }}</p>
