--- a/src/app/components/currencylist/currencylist.component.html
+++ b/src/app/components/currencylist/currencylist.component.html
@@ -1,4 +1,5 @@
-<h2>Moneda</h2>
-<p>{{ c.CurrencyName }}</p>
-<p>{{ c.CurrencySymbol }}</p>
-<p>{{ c.CurrencyValue }}</p>
+<div class="global">
+    <p>{{ currency.currencyName }}</p>
+    <p>{{ currency.currencySymbol }}</p>
+    <p>{{ currency.currencyValue }}</p>
+</div>
