intento de conversion

--- a/src/app/pages/conversor/conversor.component.html
+++ b/src/app/pages/conversor/conversor.component.html
@@ -2,4 +2,5 @@
 <div class="global">
     <h3 class="title">Moneda</h3>
     <app-currencylist class="listcomp" *ngFor="let c of currencies" [currency]="c" [routerLink]="[c.currencyId]"></app-currencylist>
+    <app-exchange></app-exchange>
 </div>
