--- a/src/app/components/exchange/exchange.component.html
+++ b/src/app/components/exchange/exchange.component.html
@@ -2,5 +2,11 @@
     <input type="text" [(ngModel)]="fromconversion.currencySymbol" placeholder="From currency">
     <input type="text" [(ngModel)]="toconversion.currencySymbol" placeholder="To currency">
     <input type="text" [(ngModel)]="quantity" placeholder="Quantity">
+</div>
+<div class="btn">
     <button (click)="exchange()">Convertir</button>
+    <button (click)="swap()">🔁</button>
+</div>
+<div class="result">
+<p>{{this.conversionresult}}</p>
 </div>
