--- a/src/app/pages/conversor/conversor.component.html
+++ b/src/app/pages/conversor/conversor.component.html
@@ -1,6 +1,13 @@
-<h2>Conversor</h2>
+
 <div class="global">
-    <h3 class="title">Moneda</h3>
-    <app-currencylist class="listcomp" *ngFor="let c of currencies" [currency]="c" [routerLink]="[c.currencyId]"></app-currencylist>
-    <app-exchange></app-exchange>
+    <div class="container">
+        <div class="listcomp">
+            <h3 class="title">Moneda</h3>
+            <app-currencylist  *ngFor="let c of currencies" [currency]="c" [routerLink]="[c.currencyId]"></app-currencylist>
+        </div>
+    </div>
+    <div class="exchange">
+        <h3 class="title">Convertir</h3>
+        <app-exchange ></app-exchange>
+    </div>
 </div>
