--- a/src/app/pages/conversor/conversor.component.html
+++ b/src/app/pages/conversor/conversor.component.html
@@ -1,5 +1,6 @@
 
 <div class="global">
+    <app-subscriptioncount class="counter"></app-subscriptioncount>
     <div class="container">
         <div class="listcomp">
             <h3 class="title">Moneda</h3>
