--- a/src/app/components/subscriptioncount/subscriptioncount.component.scss
+++ b/src/app/components/subscriptioncount/subscriptioncount.component.scss
@@ -5,5 +5,6 @@
     place-items: center;
     margin: 0;
     background-color: variables.$color-principal;
+    font-size: 1.3rem;
     color: #1f1f1f;
 }
