--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="global">
     <h2>menu</h2>
-    <a>nada</a>
-    <a>algo</a>
-    <a>mas</a>
+    <a>Perfil</a>
+    <a>Monedas</a>
+    <a>Usuarios</a>
 </div>
