--- a/src/app/components/subscriptioncount/subscriptioncount.component.scss
+++ b/src/app/components/subscriptioncount/subscriptioncount.component.scss
@@ -4,7 +4,7 @@
     height: 50px;
     place-items: center;
     margin: 0;
-    background-color: variables.$color-principal;
+    background-color: variables.$color-blanco-puro;
     font-size: 1.3rem;
-    color: #1f1f1f;
+    color: variables.$color-oscuro-puro;
 }
