--- a/src/app/pages/conversor/conversor.component.html
+++ b/src/app/pages/conversor/conversor.component.html
@@ -1,4 +1,5 @@
 <app-subscriptioncount class="counter"></app-subscriptioncount>
+<p id="mensaje" class="mobile-message"*ngIf="isMobileResolution()">para una mejor experiencia movil descarga la app</p>
 <div class="global">
     <div class="region1">
         <div class="listcomp">
