--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -12,3 +12,5 @@ $color-secundario: #4caf50;
 $color-secundario-claro: #00A86B;
 $color-secundario-oscuro: #00695C;
 $color-terciario: #FF5722;
+$color-oscuro-puro:#000000;
+$color-blanco-puro:#FFFFFF;
