--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -1,4 +1,8 @@
+@use "./../../../assets/variables.scss";
 .global{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
+    color: variables.$color-blanco-puro;
 }
