--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
 body{
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-family: 'Plus Jakarta Sans', sans-serif;
     margin: 0;
 }
