--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,7 @@
 <div class="global">
-    <h2>menu</h2>
-    <a>Perfil</a>
+    <h2>Menu</h2>
+    <a [routerLink]="['/profile/0']">Perfil</a>
     <a>Monedas</a>
     <a>Usuarios</a>
+    <a>Cambiar subscripcion</a>
 </div>
