--- a/src/app/components/exchange/exchange.component.html
+++ b/src/app/components/exchange/exchange.component.html
@@ -5,7 +5,7 @@
 </div>
 <div class="btn">
     <button (click)="exchange()">Convertir</button>
-    <button (click)="swap()">🔁</button>
+    <button (click)="swap()">Swap</button>
 </div>
 <div class="result">
 <p>{{this.conversionresult}}</p>
