--- a/src/app/components/exchange/exchange.component.scss
+++ b/src/app/components/exchange/exchange.component.scss
@@ -5,12 +5,11 @@
     grid-template-columns: auto;
     align-items: center;
     margin: 0 auto;
-    width: 100%;
-    max-width: 300px;
+    width: 20rem;
 
     input[type="text"] {
     width: 100%;
-    padding: 10px;
+    padding: 1rem;
     margin-bottom: 10px;
     border: 2px solid #ccc;
     border-radius: 4px;
@@ -63,7 +62,7 @@
     display: grid;
     place-items: center;
     height: 50px;
-    width: 50%;
+    width: 100%;
     margin: 30px auto 0;
     border: 1px solid #ccc;
     border-radius: 4px;
