--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <img src="./assets/newlogo.png" alt="imagen empresa" class="logo">
     <span class="title">Exchange click</span>
     <nav class="navigationbar">
-        <a [routerLink]="['/login']" class="abar" >Conversor<span class="point">.</span></a>
+        <a [routerLink]="['/conversor']" class="abar" >Conversor<span class="point">.</span></a>
         <a class="abar" [routerLink]="['/']" (click)="logout()">Salir<span class="point">.</span></a>
     </nav>
 </header>
