--- a/src/app/pages/conversor/conversor.component.scss
+++ b/src/app/pages/conversor/conversor.component.scss
@@ -14,6 +14,7 @@
     background-color: variables.$color-oscuro-puro;
 }
 .region1 .region2 .region3{
+    margin: 0 auto;
     background: none;
 }
 
