full design for profile

--- a/src/app/components/exchange/exchange.component.html
+++ b/src/app/components/exchange/exchange.component.html
@@ -4,7 +4,7 @@
     <input type="text" [(ngModel)]="quantity" placeholder="Quantity">
 </div>
 <div class="btn">
-    <button (click)="exchange()">Convertir</button>
+    <button (click)="exchange()">Exchange</button>
     <button (click)="swap()">Swap</button>
 </div>
 <div class="result">
