--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -14,3 +14,4 @@ $color-secundario-oscuro: #00695C;
 $color-terciario: #FF5722;
 $color-oscuro-puro:#000000;
 $color-blanco-puro:#FFFFFF;
+$color-gris-puro:#808080;
