--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -1,46 +1,69 @@
 @use "./../../../assets/variables.scss";
 .global{
+    background-color: variables.$color-oscuro-puro;
+    height: 100vh;
     display: grid;
     place-items: center;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
-
+.region1{
+    background-image: url(./../../../assets/userbackground.jpg);
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    color: variables.$color-blanco-puro;
+    p{
+        margin: 0;
+        padding: 0;
+        font-size: 1.7rem;
+        font-weight: 600;
+        text-align: center;
+    }
+}
+.region2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 0 20px;
+    border-radius: 20px;
+    p{
+        margin-bottom: 25px;
+        padding: 0;
+        font-size: 1.2rem;
+        font-weight: 600;
+        text-align: center;
+        border-bottom: 1px solid variables.$color-oscuro-puro;
+    }
+}
 
 .container{
-    width: 55vw !important;
-    height: 80vh;
     display: grid;
-    grid-template-columns: 100%;
-    background-color: variables.$color-oscuro-puro;
-    background-repeat: no-repeat;
+    grid-template-rows: 35% 75%;
     place-items: center;
-    text-align: center;
-    color: #fff;
-    box-shadow: 0 0 17px 10px rgb(0,0,0,30%);
+    width: 100%;
+    max-width: 500px;
+    height: 100%;
+    max-height: 700px;
+    background-color: variables.$color-blanco-puro;
+    //dar borde redondeado a la caja
     border-radius: 20px;
-    
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
-
-
-.cont{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    place-items: center;
-    color: #fff;
-}
-
-.container .subName{
-    font-size: 2rem;
-    color: #fff;
+.nameandlast{
+    //colocar nombre al lado del apellido
     display: flex;
-    margin-left: 68%;
-    font-weight: bold;
-    padding: 0.5rem;
+    flex-direction: row;
+    justify-content:space-around;
+    //dar espacio entre el nombre y el apellido
+    width: 100%;
 }
-.nom,.ape{
-    font-size: 1rem;
-    color: #fff;
-}
-p{
-    color: red;
+
+.rol{
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+    margin-top: 30px;
 }
