--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <img src="./assets/newlogo.png" alt="imagen empresa" class="logo">
+    <img [routerLink]="['/conversor']" src="./assets/newlogo.png" alt="imagen empresa" class="logo">
     <span class="title">Exchange click</span>
     <nav class="navigationbar">
         <a [routerLink]="['/conversor']" class="abar" >Conversor<span class="point">.</span></a>
