--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -8,3 +8,8 @@
     font-size: large;
     letter-spacing: 1px;
 }
+app-profile-icon{
+    //hacerlo tama;o icono peque;o
+    width: 20px;
+    height: 20px;
+}
