--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="global">
     <h2>Menu</h2>
     <a [routerLink]="['/profile/0']">Perfil</a>
-    <a>Monedas</a>
+    <a [routerLink]="['/currencies']">Monedas</a>
     <a>Usuarios</a>
     <a>Cambiar subscripcion</a>
 </div>
