details currency fixed

--- a/src/app/pages/currencies/currencies.component.html
+++ b/src/app/pages/currencies/currencies.component.html
@@ -1,6 +1,7 @@
+<app-currencylist  *ngFor="let list of currency" [currency]="list" [routerLink]="[list.currencyId]"></app-currencylist>
 <button class="fabb" (click)="dialogNuevaMoneda.showModal()">+</button>
 <dialog method="dialog" #dialogNuevaMoneda>
     <app-create-currency (cerrarModal)="dialogNuevaMoneda.close()"></app-create-currency>
 </dialog>
-<app-currencylist  *ngFor="let c of currencies" [currency]="c" [routerLink]="[c.currencyId]"></app-currencylist>
+
 
