--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,6 +2,6 @@
     <h2>Menu</h2>
     <a [routerLink]="['/profile/0']">Perfil</a>
     <a [routerLink]="['/currencies']">Monedas</a>
-    <a>Usuarios</a>
+    <a [routerLink]="['/users']">Usuarios</a>
     <a>Cambiar subscripcion</a>
 </div>
