--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,1 +1,8 @@
-<p>user-list works!</p>
+<div class="global">
+    <p>{{users.name}}</p>
+    <p>{{users.lastName}}</p>
+    <p>{{users.email}}</p>
+    <p>{{users.username}}</p>
+    <p>{{users.role}}</p>
+    <p>{{users.subscriptionName}}</p>
+</div>
