--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,1 +1,7 @@
-<app-user-list class="user-list" *ngFor="let list of users" [users]="list"></app-user-list>
+<app-user-list class="user-list" *ngFor="let list of users" [users]="list" [routerLink]="[list.userId]"></app-user-list>
+<button class="fabb" (click)="dialogNuevoUser.showModal()">+</button>
+<dialog method="dialog" #dialogNuevoUser>
+    <app-create-user (cerrarModal)="dialogNuevoUser.close()"></app-create-user>
+</dialog>
+
+
