--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,6 +1,6 @@
 @use "./../../../assets/variables.scss";
 footer{
-    background-color: variables.$color-secundario-oscuro;
+    background: linear-gradient(45deg, #233151, #0E173A);
     
 }
 footer p{
