--- a/src/app/components/subscriptioncount/subscriptioncount.component.html
+++ b/src/app/components/subscriptioncount/subscriptioncount.component.html
@@ -1,1 +1,3 @@
-<p class="counter">intentos restantes: {{user.subCount}}</p>
+<div class="global">
+    <p class="counter">intentos restantes: {{user.subCount}}</p>
+</div>
