--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -5,13 +5,13 @@ $alto-body: calc(100vh - $alto-header - $alto-footer);
 $fuente: -apple-system, BlinkMacSystemFont, sans-serif;
 
 
-$color-principal: #FFBE2E;
+$color-principal: #0E173A;
 $color-oscuro: #0e182d;
-$color-primario-claro: #F8D764;
+$color-primario-claro: #6478a7;
 $color-secundario: #4caf50;
 $color-secundario-claro: #00A86B;
 $color-secundario-oscuro: #00695C;
 $color-terciario: #FF5722;
 $color-oscuro-puro:#000000;
 $color-blanco-puro:#FFFFFF;
-$color-gris-puro:#808080;
+$color-gris-puro:#535e75;
