--- a/src/app/components/exchange/exchange.component.scss
+++ b/src/app/components/exchange/exchange.component.scss
@@ -1,5 +1,10 @@
 @use "./../../../assets/variables.scss";
 
+//card
+
+
+
+
 .inp-conversion {
     display: grid;
     grid-template-columns: auto;
