--- a/src/app/pages/conversor/conversor.component.html
+++ b/src/app/pages/conversor/conversor.component.html
@@ -1,20 +1,24 @@
 
-<app-subscriptioncount class="counter"></app-subscriptioncount>
-<p id="mensaje" class="mobile-message"*ngIf="isMobileResolution()">para una mejor experiencia movil descarga la app</p>
-<div class="global">
-    <div class="region1">
-        <div class="listcomp">
-            <h3 class="title">Moneda</h3>
-            
-            <app-currencylist  *ngFor="let c of currencies" [currency]="c" [routerLink]="[c.currencyId]"></app-currencylist>
+<div class="container">
+    <div class="sub">
+        <app-subscriptioncount class="counter"></app-subscriptioncount>
+    </div>
+    <p id="mensaje" class="mobile-message"*ngIf="isMobileResolution()">para una mejor experiencia movil descarga la app</p>
+    <div class="global">
+        <div class="region1">
+            <div class="listcomp">
+                <h3 class="title">Moneda</h3>
+                
+                <app-currencylist  *ngFor="let c of currencies" [currency]="c" [routerLink]="[c.currencyId]"></app-currencylist>
+            </div>
         </div>
-    </div>
-    <div class="region2">
-        <h3 class="title">Convertir</h3>
-        <app-exchange ></app-exchange>
-    </div>
-    <div class="region3">
-        
-        <app-sidebar></app-sidebar>
+        <div class="region2">
+            <h3 class="title">Convertir</h3>
+            <app-exchange ></app-exchange>
+        </div>
+        <div class="region3">
+            
+            <app-sidebar></app-sidebar>
+        </div>
     </div>
 </div>
